--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main/project"]
+    branches: ["main/project/index.html"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
